[gd_scene load_steps=22 format=2]

[ext_resource path="res://REAL BUTT ENEMIES/BouxRuns.png" type="Texture" id=1]
[ext_resource path="res://REAL BUTT ENEMIES/WahchonRuns.gd" type="Script" id=2]
[ext_resource path="res://REAL BUTT ENEMIES/BoxDed.png" type="Texture" id=3]
[ext_resource path="res://BingosBadestSounds/StompBox.ogg" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 14, 14.25 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 29 ), SubResource( 31 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ) ],
"loop": true,
"name": "Ded",
"speed": 12.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 24 ), SubResource( 23 ), SubResource( 22 ), SubResource( 21 ), SubResource( 20 ), SubResource( 19 ), SubResource( 18 ) ],
"loop": true,
"name": "Run",
"speed": 25.0
} ]

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 29 ), SubResource( 31 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ), SubResource( 32 ) ],
"loop": true,
"name": "Ded",
"speed": 12.0
} ]

[node name="WahchonRunningForHisLife" type="KinematicBody2D"]
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( 0, 1 )
shape = SubResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "Run"
frame = 9
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 33 )
animation = "Ded"

[node name="LedgeCheck" type="RayCast2D" parent="."]
position = Vector2( 14, 16 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="LedgeCheck2" type="RayCast2D" parent="."]
position = Vector2( -14, 16 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 2
position = Vector2( 0, 1 )
shape = SubResource( 16 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
max_distance = 15278.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
